--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -27,6 +27,9 @@
         </ul>
 
         {% if user.is_authenticated %}
+          <a href="{% url 'user_update' user.pk %}" class="btn btn-outline-warning me-2">
+            {% trans "Edit profile" %}
+          </a>
           <form method="post" action="{% url 'logout' %}" class="d-inline">
             {% csrf_token %}
             <button type="submit" class="btn btn-outline-light">{% trans "Logout" %}</button>
