--- a/task_manager/templates/users/user_confirm_delete.html
+++ b/task_manager/templates/users/user_confirm_delete.html
@@ -3,13 +3,16 @@
 
 {% block content %}
   <div class="d-flex justify-content-center align-items-center" style="min-height: 60vh;">
-    <div class="text-center">
-      <h2 class="mb-4">{% trans "Are you sure you want to delete account?" %}</h2>
-      <form method="post">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-warning">{% trans "Delete" %}</button>
-        <a href="{% url 'user_list' %}" class="btn btn-outline-dark">{% trans "Cancel" %}</a>
-      </form>
+    <div class="card p-4 shadow-sm" style="min-width: 400px;">
+      <div class="card-body text-center">
+        <h2 class="mb-3">{% trans "Are you sure you want to delete account?" %}</h2>
+        <p class="text-secondary mb-4">{% trans "If you delete the account, it cannot be restored." %}</p>
+        <form method="post">
+          {% csrf_token %}
+          <button type="submit" class="btn btn-warning">{% trans "Delete" %}</button>
+          <a href="{% url 'user_list' %}" class="btn btn-outline-dark ms-2">{% trans "Cancel" %}</a>
+        </form>
+      </div>
     </div>
   </div>
 {% endblock %}
