--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -30,6 +30,11 @@
                 {% trans "Statuses" %}
               </a>
             </li>
+            <li>
+              <a href="{% url 'task_list' %}" class="nav-link px-2 text-white">
+                {% trans "Tasks" %}
+              </a>
+            </li>
           {% endif %}
         </ul>
 
