test: add label CRUD tests and update task details view

--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -35,6 +35,11 @@
                 {% trans "Tasks" %}
               </a>
             </li>
+            <li>
+              <a href="{% url 'label_list' %}" class="nav-link px-2 text-white">
+                {% trans "Labels" %}
+              </a>
+            </li>
           {% endif %}
         </ul>
 
