--- a/task_manager/templates/tasks/task_list.html
+++ b/task_manager/templates/tasks/task_list.html
@@ -7,7 +7,24 @@
   <a href="{% url 'task_create' %}" class="btn btn-warning mb-3">
     {% trans "Create task" %}
   </a>
-
+  
+  <div class="card mb-4">
+    <div class="card-body">
+      <form method="get">
+        {% for field in filter.form %}
+          <div class="mb-3">
+            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+            {{ field }}
+            {% if field.errors %}
+              <div class="text-danger">{{ field.errors }}</div>
+            {% endif %}
+          </div>
+        {% endfor %}
+        <button type="submit" class="btn btn-warning">{% trans "Filter" %}</button>
+      </form>
+    </div>
+  </div>
+  
   <table class="table table-striped">
     <thead>
       <tr>
