--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -53,7 +53,7 @@
           </form>
         {% else %}
           <div class="text-end">
-            <a href="{% url 'login' %}" class="btn btn-outline-light me-2">{% trans "Login" %}</a>
+            <a href="{% url 'login' %}" class="btn btn-outline-light me-2">{% trans "Sign in" %}</a>
             <a href="{% url 'user_create' %}" class="btn btn-warning">{% trans "Sign up" %}</a>
           </div>
         {% endif %}
