fix(i18n): update translation for registration button

--- a/task_manager/templates/users/user_create.html
+++ b/task_manager/templates/users/user_create.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block content %}
-  <h1>{% trans "Register" %}</h1>
+  <h1>{% trans "Registration" %}</h1>
 
   <form method="post">
     {% csrf_token %}
