fix(i18n): update translation button for filter

--- a/task_manager/templates/tasks/task_list.html
+++ b/task_manager/templates/tasks/task_list.html
@@ -26,7 +26,7 @@
             </div>
           {% endif %}
         {% endfor %}
-        <button type="submit" class="btn btn-warning">{% trans "Filter" %}</button>
+        <button type="submit" class="btn btn-warning">{% trans "Show" %}</button>
       </form>
     </div>
   </div>
